Add Python 3.14 to test matrix
conda 26.1.0 and all dependencies are available for Python 3.14 on
conda-forge. All 264 tests pass.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: ["test-py310", "test-py311", "test-py312", "test-py313"]
+        python: ["test-py310", "test-py311", "test-py312", "test-py313", "test-py314"]
     steps:
       - uses: actions/checkout@v4
 
