--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,11 +30,15 @@ jobs:
           activate-environment: docs
           channels: conda-forge
 
-      - name: Install conda-pypi
-        run: conda install -n base -y -c conda-forge conda-pypi
+      - name: Install docs dependencies and conda-pypi
+        run: |
+          conda install -y conda-pypi \
+            conda-sphinx-theme linkify-it-py myst-parser sphinx \
+            sphinx-argparse sphinx-copybutton sphinx-design \
+            sphinx-reredirects sphinx-sitemap
 
-      - name: Install conda-tasks with docs dependencies
-        run: conda pypi install -e ".[docs]"
+      - name: Install conda-tasks (editable)
+        run: conda pypi install -e .
 
       - name: Build docs
         run: conda task run docs
