--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,11 @@ jobs:
           activate-environment: test
           channels: conda-forge
 
-      - name: Install conda-pypi
-        run: conda install -n base -y -c conda-forge conda-pypi
+      - name: Install test dependencies and conda-pypi
+        run: conda install -y pytest pytest-cov conda-pypi
 
-      - name: Install conda-tasks with test dependencies
-        run: conda pypi install -e ".[test]"
+      - name: Install conda-tasks (editable)
+        run: conda pypi install -e .
 
       - name: Run tests
         run: conda task run test
