--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,14 @@ jobs:
           activate-environment: test
           channels: conda-forge
 
+      - name: Install conda-pypi
+        run: conda install -n base -y -c conda-forge conda-pypi
+
       - name: Install test dependencies
         run: conda install -y pytest pytest-cov
 
       - name: Install conda-tasks (editable)
-        run: pip install --no-build-isolation --no-deps -e .
+        run: conda pypi install -e .
 
       - name: Run tests
         run: conda task run test
