Install conda-tasks in both active env and base
Active env: needed for test imports (python -m pytest)
Base env: needed for conda task plugin discovery

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,9 @@ jobs:
         run: conda install -y pytest pytest-cov
 
       - name: Install conda-tasks (editable)
-        run: conda pypi install -e .
+        run: |
+          conda pypi install -e .
+          conda run -n base conda pypi install -e .
 
       - name: Run tests
         run: conda task run test
