--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,7 +41,9 @@ jobs:
             sphinx-reredirects sphinx-sitemap
 
       - name: Install conda-tasks (editable)
-        run: conda pypi install -e .
+        run: |
+          conda pypi install -e .
+          conda run -n base conda pypi install -e .
 
       - name: Build docs
         run: conda task run docs
